# git-labbook

./: .gitignore  Makefile.am  README.devel  configure.ac  dist.ini  dzil-workaround  git-labbook  git-labbook-version  git-labbook-version.in  gitlabbook-common  notes.org  run  scenario
lib/Git/: LabBook.pm
lib/Git/LabBook/: Cmds.pm  (+2 more)
scenario.d/: git_merge.sh  rebuild-gitrep
scenario.d/data/: 0001-Initial-commit.patch  0002-Update-README.patch  0003-Adding-initial-files.patch  0004-Updating-gitignore-list.patch  0005-Fixing-the-error-regarding-the-name-of-the-folder.patch  0006-Adding-first-experimental-result.patch  0007-Adding-script-for-automatically-reverting-source-cod.patch  0008-Updating-gitignore-list-with-Git-helpers.patch  0009-Fixing-the-error-regarding-the-name-of-the-folder-re.patch  0010-Adding-a-script-for-merging-with-xp-branches.patch  0011-Cherry-pick-from-xp1-Fixing-the-error-regarding-the-.patch  0012-Adding-input-parameter-as-the-number-of-elements-to-.patch  0013-fix-for-the-revert-script.patch  0014-adding-number-of-elements-to-the-file-output-and-cos.patch  0015-Adding-a-simple-analysis-based-on-Org-mode-and-R.patch  0016-Adding-measured-performance.patch  0017-Writing-about-the-xp1-experimental-campaign-in-the-l.patch  0018-Taking-notes-and-doing-analysis-of-the-measured-resu.patch  0019-Easier-if-multiple-runs-are-stored-in-a-same-file.patch  0020-Running-experiments-through-laboratory-notebook.patch  0021-Adding-experiment-data.patch  0022-Running-second-experiments-through-laboratory-notebo.patch  0023-Adding-second-experiment-data.patch  (+6 more)
(+1 files in other folders)
