#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([gitlabbook], [0.1], [Vincent.Danjean@imag.fr])
AC_CONFIG_AUX_DIR([build-aux])
dnl AC_CONFIG_MACRO_DIR([m4])
AC_CANONICAL_TARGET
AC_CONFIG_SRCDIR([git-labbook])

AM_INIT_AUTOMAKE([-Wall tar-pax 1.10 color-tests foreign subdir-objects])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([
    git-labbook-version
])

AC_CONFIG_FILES([
    Makefile
])

AC_OUTPUT
